--- a/index.rmd
+++ b/index.rmd
@@ -1,18 +1,7 @@
 ---
-title: "P8105 Homework 4"
-output: 
-  html_document:
-    toc: true
-    toc_float: true
-    theme: cerulean
+title: "Holy cow!"
 ---
 
-# Welcome to my website.
+### I have a webpage!
 
-Here is a picture of my dog, Lulu.
-
-![](https://www.instagram.com/p/BpIWz0NhyKd/)
-
-# Link to About Me page
-
-[About Me](about.html)
+And I can put all kinds of stuff on it!
