--- a/about.rmd
+++ b/about.rmd
@@ -2,15 +2,16 @@
 title: "Helen Zhang"
 ---
 
-MPH Candidate, Department of Epidemiology
-Comparative Effectiveness and Outcomes Research
-Columbia University Mailman School of Public Health
-
-#### About 
+MPH Candidate, Department of Epidemiology <br> 
+Comparative Effectiveness and Outcomes Research  
+Columbia University Mailman School of Public Health   
+  
+  
+### About 
 
 I received a BS in Microbiology and Certificate in Global Health from [University of Wisconsin-Madison](https://www.wisc.edu/) in 2018. I am currently a second-year MPH student in the Department of Epidemiology at [Columbia University](https://www.columbia.edu/). My expected graduation date is in May 2021.
 
-#### Work Experience
+### Work Experience
 
 Since June 2020, I have been working as a Contact Tracer for the [Wisconsin Department of Health Services](https://www.dhs.wisconsin.gov/). 
 I completed my summer practicum under [Dr. Parisa Tehranifar](https://www.publichealth.columbia.edu/people/our-faculty/pt140), evaluating risk factors for breast cancer in young Ghanaian women using a family-based and unrelated case-control design.
@@ -19,8 +20,8 @@ Prior to attending Columbia University, I served as Science Editor and Chief of 
 
 #### Contact Information
 
-Helen Zhang
-[Department of Epidemiology](https://www.publichealth.columbia.edu/academics/departments/epidemiology)
+Helen Zhang  
+[Department of Epidemiology](https://www.publichealth.columbia.edu/academics/departments/epidemiology)  
 [Columbia Mailman School of Public Health](http://www.mailman.columbia.edu/)  
 
-Email: [helen.z@columbia.edu](mailto:helen.z@columbia.edu)
+Email: [helen.z@columbia.edu](mailto:helen.z@columbia.edu)  
