making plots for NYC restaurant data

--- a/plotly.Rmd
+++ b/plotly.Rmd
@@ -15,3 +15,41 @@ library(tidyverse)
 library(p8105.datasets)
 library(plotly)
 ```
+
+```{r data_selection}
+data("rest_inspec")
+
+rest_inspec =
+  rest_inspec %>%
+  filter(grade %in% c("A", "B", "C"), boro == "Manhattan") %>% 
+  mutate(boro = str_to_title(boro)) %>% 
+  relocate(boro) %>% view
+
+```
+
+### Chart A
+
+```{r scatterplot}
+rest_inspec %>%
+  mutate(text_label = str_c("Score: ", score, "\nGrade: ", grade)) %>% 
+  plot_ly(
+    x = ~inspection_date, y = ~score, type = "scatter", mode = "markers",
+    color = ~grade, text = ~text_label, alpha = 0.5)
+```
+
+### Chart B
+
+```{r boxplot}
+rest_inspec %>%
+  plot_ly(y = ~score, color = ~cuisine_description, type = "box", colors = "viridis")
+```
+
+### Chart C
+
+```{r barchart}
+rest_inspec %>% 
+  count(cuisine_description) %>% 
+  mutate(cuisine_description = fct_reorder(cuisine_description, n)) %>% 
+  plot_ly(x = ~cuisine_description, y = ~n, color = ~cuisine_description, type = "bar", colors = "viridis")
+```
+
