--- a/plotly.Rmd
+++ b/plotly.Rmd
@@ -22,13 +22,7 @@ data("rest_inspec")
 rest_inspec =
   rest_inspec %>%
   mutate(boro = str_to_title(boro)) %>% 
-  filter(grade %in% c("A", "B", "C"), boro == "Manhattan") %>% 
-  separate(inspection_date, into = c("year", "month", "day"), sep = "-") %>%
-  mutate(
-    year = as.integer(year),
-    month = as.integer(month), 
-    day = as.integer(day)
-  ) %>% 
+  filter(grade %in% c("A", "B", "C"), boro == "Manhattan") %>%
   relocate(boro) %>% 
   sample_n(10000) %>% 
   view
@@ -40,7 +34,7 @@ rest_inspec =
 rest_inspec %>%
   mutate(text_label = str_c("Score: ", score, "\nGrade: ", grade)) %>% 
   plot_ly(
-    x = ~grade_date, y = ~score, type = "scatter", mode = "markers",
+    x = ~inspection_date, y = ~score, type = "scatter", mode = "markers",
     color = ~grade, text = ~text_label, alpha = 0.5)
 ```
 
@@ -57,6 +51,6 @@ rest_inspec %>%
 rest_inspec %>% 
   count(cuisine_description) %>% 
   mutate(cuisine_description = fct_reorder(cuisine_description, n)) %>% 
-  plot_ly(x = ~cuisine_description, y = ~n, color = ~cuisine_description, type = "bar", colors = "viridis")
+  plot_ly(x = ~cuisine_description, y = ~n, color = ~cuisine_description, type = "bar", colors = "viridis", showlegend = FALSE)
 ```
 
