added image of Lulu

--- a/about.rmd
+++ b/about.rmd
@@ -5,7 +5,9 @@ title: "Helen Zhang"
 MPH Candidate, Department of Epidemiology <br> 
 Comparative Effectiveness and Outcomes Research  
 Columbia University Mailman School of Public Health   
-  
+
+<br><img src="images/graduation.jpg" alt="graduation" style="width:65%; border:10px solid"><br>
+
   
 ### About 
 
